--- a/About.html
+++ b/About.html
@@ -33,15 +33,29 @@
         <div id="NpageLinksCont">
           <a href="./Home.html">HOME</a>
           <a href="./About.html">ABOUT US</a>
-          <a href="#">CONTACT US</a>
-          <a href="#">BLOG</a>
+          <a href="./blog.html">BLOG</a>
+          <a href="./payment.html">BOOKINGS</a>
+          <a href="./contact.html">CONTACT US</a>
         </div>
         <div id="NnavBtnCont">
           <button id="Sh-logInBtn">Log in</button>
           <button id="Sh-signInBtn">Sign up</button>
         </div>
+
+        <div class="dropdown">
+          <button id="menuBtn" class="dropdown-btn"><img src="./home-images/menu-icon.jpg" width="45px" alt="menu"></button>
+          <div id="myDropdown" class="dropdown-content">
+            <a class="dropdown-item" href="./Home.html">HOME</a>
+          <a class="dropdown-item" href="./About.html">ABOUT US</a>
+          <a class="dropdown-item" href="./blog.html">BLOG</a>
+          <a class="dropdown-item" href="./payment.html">BOOKINGS</a>
+          <a class="dropdown-item" href="./contact.html">CONTACT US</a>
+        </div>
+      </div>
       </nav>
     </div>
+
+  <div id="headerAlignCont">
     <section id="NheadingInpContainer">
       <h1>About Travel Tribe</h1>
       <h3>Get to know Travel tribe closer and make it happen!</h3>
@@ -75,13 +89,13 @@
         </div>
         <div class="NbtnCont">
           <button id="Sh-searchBtn">
-            <span style="font-size: 70px" class="material-symbols-outlined"
-              >search</span
-            >
+            <span id="searchIcon" style="font-size: 450%; color: white;"
+              class="material-symbols-outlined">search</span>
           </button>
         </div>
       </div>
     </section>
+  </div>
 
     <section class="NalignContainer">
       <div>
