--- a/payment.html
+++ b/payment.html
@@ -24,6 +24,7 @@
         <a href="./About.html">ABOUT US</a>
         <a href="./blog.html">BLOG</a>
         <a href="./contact.html">CONTACT US</a>
+        <a href="./payment.html">BOOKING</a>
       </div>
       <div id="Sh-navBtnCont">
         <button id="Sh-logInBtn">Log in</button>
@@ -62,15 +63,15 @@
 
 <!-- Explore more packege -->
 <div id="packegeheading">
-  <i class="fa fa-hand-o-down" style="font-size:24px"></i>
-  <i class="fa fa-hand-o-down" style="font-size:24px"></i>
+  <!-- <i class="fa fa-hand-o-down" style="font-size:24px"></i>
+  <i class="fa fa-hand-o-down" style="font-size:24px"></i> -->
   <i class="fa fa-hand-o-down" style="font-size:24px"></i>
 
- <h1 class="exploremoreline">Explore More packege</h1> 
+ <h1 class="exploremoreline">  Explore More packege  </h1> 
 
  <i class="fa fa-hand-o-down" style="font-size:24px"></i>
-  <i class="fa fa-hand-o-down" style="font-size:24px"></i>
-  <i class="fa fa-hand-o-down" style="font-size:24px"></i>
+  <!-- <i class="fa fa-hand-o-down" style="font-size:24px"></i>
+  <i class="fa fa-hand-o-down" style="font-size:24px"></i> -->
 
 </div>
 
