--- a/signup.html
+++ b/signup.html
@@ -30,6 +30,7 @@
           <a href="./About.html">ABOUT US</a>
 
           <a href="./blog.html">BLOG</a>
+          <a href="./payment.html">BOOKINGS</a>
           <a href="./contact.html">CONTACT US</a>
         </div>
         <div id="NnavBtnCont">
