add a package functionality

--- a/Home.html
+++ b/Home.html
@@ -84,38 +84,45 @@
     <div>
       <div>
         <div class="Sh-packageLogoCont"><img src="./home-images/kona-logo.webp" alt="logo"></div>
-        <div class="Sh-packageNames"><a href="">Kona Package</a></div>
+        <div class="Sh-packageNames"><a href="#">Kona Package</a></div>
       </div>
       <div>
         <div class="Sh-packageLogoCont"><img src="./home-images/historical-log.webp" alt="logo"></div>
-        <div class="Sh-packageNames"><a href="">Historical Destination</a></div>
+        <div class="Sh-packageNames"><a id="HistoricalPackageLInk" href="#">Historical Destination</a></div>
       </div>
       <div>
         <div class="Sh-packageLogoCont"><img src="./home-images/camping-logo.webp" alt="logo"></div>
-        <div class="Sh-packageNames"><a href="">Camping Package</a></div>
+        <div class="Sh-packageNames"><a id="CampingPackageLink" href="#">Camping Package</a></div>
       </div>
       <div>
         <div class="Sh-packageLogoCont"><img src="./home-images/asia-logo.webp" alt="logo"></div>
-        <div class="Sh-packageNames"><a href="">Asia Destination</a></div>
+        <div class="Sh-packageNames"><a href="#">Asia Destination</a></div>
       </div>
       <div>
         <div class="Sh-packageLogoCont"><img src="./home-images/desert-logo.webp" alt="logo"></div>
-        <div class="Sh-packageNames"><a href="">Desert Oasis Package</a></div>
+        <div class="Sh-packageNames"><a id="DesertPackageLink" href="#">Desert Oasis Package</a></div>
       </div>
       <div>
         <div class="Sh-packageLogoCont"><img src="./home-images/hiking-logo.jpg" alt="logo"></div>
-        <div class="Sh-packageNames"><a href="">Hiking Package</a></div>
+        <div class="Sh-packageNames"><a id="HikingPackageLink" href="#">Hiking Package</a></div>
       </div>
       <div>
         <div class="Sh-packageLogoCont"><img src="./home-images/Europe-logo.jpg" alt="logo"></div>
-        <div class="Sh-packageNames"><a href="">Europa Destination</a></div>
+        <div class="Sh-packageNames"><a id="EuropePackageLink" href="#">Europe Destination</a></div>
       </div>
       <div>
         <div class="Sh-packageLogoCont"><img src="./home-images/beach-logo.webp" alt="logo"></div>
-        <div class="Sh-packageNames"><a href="">Beach Package</a></div>
+        <div class="Sh-packageNames"><a href="#">Beach Package</a></div>
       </div>
     </div>
   </section>
+
+  <div id="placesOuterContainer">
+    <div id="placesCont"></div>
+    <div id="buttonCont"><button id="backToPageBtn">BACK TO PAGE</button></div>
+  </div>
+
+  <!-- ------------------------------------------------------------------------------ -->
 
   <div id="Sh-blankCont"></div>
 
