navbar stickness done in all pages

--- a/Home.html
+++ b/Home.html
@@ -17,9 +17,6 @@
 
 <body>
   <!-- Surbhi -->
-  <header>
-    <div id="Sh-fadeCont"></div>
-  </header>
   <div id="Sh-alignCont">
     <nav>
       <div id="Sh-logoCont"><a href="./Home.html"><img
@@ -27,7 +24,7 @@
       <div id="Sh-pageLinksCont">
         <a href="./Home.html">HOME</a>
         <a href="./About.html">ABOUT US</a>
-        <a href="./blog.html">BLOG</a>
+        <a href="./blog.html">EXPLORE</a>
         <a  href="./payment.html">BOOKINGS</a>
         <a href="./contact.html">CONTACT US</a>
 
@@ -51,76 +48,79 @@
           <a class="dropdown-item" href="./contact.html">CONTACT US</a>
       </div>
     </div>
-
     </nav>
   </div>
+  
+  <header>
+    <div id="headerAlignCont">
+      <section id="Sh-headingInpContainer">
+        <h1>Travel around the world</h1>
+        <h3>Enjoy our services for your trip anywhere and anytime</h3>
+        <div id="Sh-inputCont">
+          <div class="Sh-labelCont">
+            <label for="placeNameInp" class="Sh-labels">Location</label>
+            <input type="text" name="placeName" id="placeNameInp" size="13" placeholder="Where to go">
+          </div>
+          <div class="Sh-labelCont">
+            <label for="checkInDate" class="Sh-labels">Check in</label>
+            <input type="date" name="checkInDate" id="checkInDate" placeholder="Choose a date">
+          </div>
+          <div class="Sh-labelCont">
+            <label for="visitor" class="Sh-labels">Visitor</label>
+            <input type="text" name="placeName" id="visitor" size="10" placeholder="Add guest">
+          </div>
+          <div class="Sh-btnCont">
+            <button id="Sh-searchBtn"><span id="searchIcon" style="font-size: 450%; color: white;"
+                class="material-symbols-outlined">search</span></button>
+          </div>
+        </div>
+      </section>
+    </div>
 
-  <div id="headerAlignCont">
-    <section id="Sh-headingInpContainer">
-      <h1>Travel around the world</h1>
-      <h3>Enjoy our services for your trip anywhere and anytime</h3>
-      <div id="Sh-inputCont">
-        <div class="Sh-labelCont">
-          <label for="placeNameInp" class="Sh-labels">Location</label>
-          <input type="text" name="placeName" id="placeNameInp" size="13" placeholder="Where to go">
+    <section class="Sh-alignContainer">
+      <div>
+        <div>
+          <div class="Sh-packageLogoCont"><img src="./home-images/kona-logo.webp" alt="logo"></div>
+          <div class="Sh-packageNames"><a href="#">Kona Package</a></div>
         </div>
-        <div class="Sh-labelCont">
-          <label for="checkInDate" class="Sh-labels">Check in</label>
-          <input type="date" name="checkInDate" id="checkInDate" placeholder="Choose a date">
+        <div>
+          <div class="Sh-packageLogoCont"><img src="./home-images/historical-log.webp" alt="logo"></div>
+          <div class="Sh-packageNames"><a id="HistoricalPackageLInk" href="#">Historical Destination</a></div>
         </div>
-        <div class="Sh-labelCont">
-          <label for="visitor" class="Sh-labels">Visitor</label>
-          <input type="text" name="placeName" id="visitor" size="10" placeholder="Add guest">
+        <div>
+          <div class="Sh-packageLogoCont"><img src="./home-images/camping-logo.webp" alt="logo"></div>
+          <div class="Sh-packageNames"><a id="CampingPackageLink" href="#">Camping Package</a></div>
         </div>
-        <div class="Sh-btnCont">
-          <button id="Sh-searchBtn"><span id="searchIcon" style="font-size: 450%; color: white;"
-              class="material-symbols-outlined">search</span></button>
+        <div>
+          <div class="Sh-packageLogoCont"><img src="./home-images/asia-logo.webp" alt="logo"></div>
+          <div class="Sh-packageNames"><a href="#">Asia Destination</a></div>
+        </div>
+        <div>
+          <div class="Sh-packageLogoCont"><img src="./home-images/desert-logo.webp" alt="logo"></div>
+          <div class="Sh-packageNames"><a id="DesertPackageLink" href="#">Desert Oasis Package</a></div>
+        </div>
+        <div>
+          <div class="Sh-packageLogoCont"><img src="./home-images/hiking-logo.jpg" alt="logo"></div>
+          <div class="Sh-packageNames"><a id="HikingPackageLink" href="#">Hiking Package</a></div>
+        </div>
+        <div>
+          <div class="Sh-packageLogoCont"><img src="./home-images/Europe-logo.jpg" alt="logo"></div>
+          <div class="Sh-packageNames"><a id="EuropePackageLink" href="#">Europe Destination</a></div>
+        </div>
+        <div>
+          <div class="Sh-packageLogoCont"><img src="./home-images/beach-logo.webp" alt="logo"></div>
+          <div class="Sh-packageNames"><a href="#">Beach Package</a></div>
         </div>
       </div>
     </section>
-  </div>
-
-  <section class="Sh-alignContainer">
-    <div>
-      <div>
-        <div class="Sh-packageLogoCont"><img src="./home-images/kona-logo.webp" alt="logo"></div>
-        <div class="Sh-packageNames"><a href="#">Kona Package</a></div>
-      </div>
-      <div>
-        <div class="Sh-packageLogoCont"><img src="./home-images/historical-log.webp" alt="logo"></div>
-        <div class="Sh-packageNames"><a id="HistoricalPackageLInk" href="#">Historical Destination</a></div>
-      </div>
-      <div>
-        <div class="Sh-packageLogoCont"><img src="./home-images/camping-logo.webp" alt="logo"></div>
-        <div class="Sh-packageNames"><a id="CampingPackageLink" href="#">Camping Package</a></div>
-      </div>
-      <div>
-        <div class="Sh-packageLogoCont"><img src="./home-images/asia-logo.webp" alt="logo"></div>
-        <div class="Sh-packageNames"><a href="#">Asia Destination</a></div>
-      </div>
-      <div>
-        <div class="Sh-packageLogoCont"><img src="./home-images/desert-logo.webp" alt="logo"></div>
-        <div class="Sh-packageNames"><a id="DesertPackageLink" href="#">Desert Oasis Package</a></div>
-      </div>
-      <div>
-        <div class="Sh-packageLogoCont"><img src="./home-images/hiking-logo.jpg" alt="logo"></div>
-        <div class="Sh-packageNames"><a id="HikingPackageLink" href="#">Hiking Package</a></div>
-      </div>
-      <div>
-        <div class="Sh-packageLogoCont"><img src="./home-images/Europe-logo.jpg" alt="logo"></div>
-        <div class="Sh-packageNames"><a id="EuropePackageLink" href="#">Europe Destination</a></div>
-      </div>
-      <div>
-        <div class="Sh-packageLogoCont"><img src="./home-images/beach-logo.webp" alt="logo"></div>
-        <div class="Sh-packageNames"><a href="#">Beach Package</a></div>
-      </div>
+  
+    <div id="placesOuterContainer">
+      <div id="placesCont"></div>
+      <div id="buttonCont"><button id="backToPageBtn">BACK TO PAGE</button></div>
     </div>
-  </section>
+  </header>
 
-  <div id="placesOuterContainer">
-    <div id="placesCont"></div>
-    <div id="buttonCont"><button id="backToPageBtn">BACK TO PAGE</button></div>
-  </div>
+  
 
   <!-- ------------------------------------------------------------------------------ -->
 
