--- a/signup.html
+++ b/signup.html
@@ -29,7 +29,7 @@
           <a href="./Home.html">HOME</a>
           <a href="./About.html">ABOUT US</a>
 
-          <a href="./blog.html">BLOG</a>
+          <a href="./blog.html">EXPLORE</a>
           <a href="./payment.html">BOOKINGS</a>
           <a href="./contact.html">CONTACT US</a>
         </div>
