--- a/payment.html
+++ b/payment.html
@@ -24,7 +24,7 @@
       <div id="Sh-pageLinksCont">
         <a href="./Home.html">HOME</a>
         <a href="./About.html">ABOUT US</a>
-        <a href="./blog.html">BLOG</a>
+        <a href="./blog.html">EXPLORE</a>
         <a href="./payment.html">BOOKINGS</a>
         <a href="./contact.html">CONTACT US</a>
    
@@ -43,7 +43,7 @@
         <div id="myDropdown" class="dropdown-content">
           <a class="dropdown-item" href="./Home.html">HOME</a>
           <a class="dropdown-item" href="./About.html">ABOUT US</a>
-          <a class="dropdown-item" href="./blog.html">BLOG</a>
+          <a class="dropdown-item" href="./blog.html">EXPLORE</a>
           <a class="dropdown-item" href="./payment.html">BOOKINGS</a>
           <a class="dropdown-item" href="./contact.html">CONTACT US</a>
       </div>
